--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,10 @@ html {
   font-size: 1em;
   line-height: 1.4;
 }
+body {
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.4;
+}
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
