--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ html {
   line-height: 1.4;
 }
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   line-height: 1.4;
 }
 /*
