--- a/css/fonts.css
+++ b/css/fonts.css
@@ -11,6 +11,12 @@
   font-weight: bold;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Open Sans';
+  src: url("../fonts/Open_Sans/OpenSans-Light.ttf");
+  font-weight: lighter;
+  font-style: normal;
+}
 
 /* Roboto Condensed */
 @font-face {
