--- a/css/main.css
+++ b/css/main.css
@@ -163,14 +163,11 @@ textarea {
 
 #barra-principal .nav-item {
   transition: box-shadow linear 0.2s;
+  padding: 0.5rem 0;
 }
 
-/* #barra-principal .nav-item.active {
-  box-shadow: inset 0 -3px 0 #668;
-} */
-
 #barra-principal .nav-item:hover {
-  box-shadow: inset 0 -3px 0 #668;
+  box-shadow: inset 0 -3px 0 orange;
 }
 
 /* Principal */
