--- a/css/main.css
+++ b/css/main.css
@@ -181,6 +181,13 @@ textarea {
   margin-bottom: 0;
 }
 
+/* Carrusel Principal */
+#carouselInfo article {
+  background-color: #888;
+  height: 45vh;
+  padding: 2rem;
+}
+
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
