finishing carousel configs

--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,9 @@ textarea {
 }
 
 /* Carrusel Principal */
+#carouselInfo {
+  background-color: #fff;
+}
 #carouselInfo article {
   background-color: #888;
   height: 45vh;
