--- a/css/main.css
+++ b/css/main.css
@@ -184,11 +184,31 @@ textarea {
 /* Carrusel Principal */
 #carouselInfo {
   background-color: #fff;
+  overflow: hidden;
 }
 #carouselInfo article {
   background-color: #888;
   height: 45vh;
   padding: 2rem;
+}
+#carouselInfo nav{
+  display: none;
+}
+#carouselInfo nav a{
+  color: #224;
+  margin: 0.5rem;
+}
+#carouselInfo nav a:hover{
+  color: #fff;
+  background-color: orange;
+}
+#carouselInfo nav a.active{
+  color: #fff;
+  background-color: #224;
+}
+
+#carouselInfo article .carousel-caption{
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 /* ==========================================================================
@@ -199,12 +219,14 @@ textarea {
 
  /* Small devices (landscape phones, 576px and up) */
  @media (min-width: 576px) {
-   /* ... */
+
  }
 
  /* Medium devices (tablets, 768px and up) */
  @media (min-width: 768px) {
-   /* ... */
+   #carouselInfo nav{
+     display: block;
+   }
  }
 
  /* Large devices (desktops, 992px and up) */
@@ -212,6 +234,15 @@ textarea {
    #herramientas .herramienta {
      max-width: 25%;
      margin: 0;
+   }
+
+   #carouselInfo nav{
+     display: flex;
+   }
+
+   #carouselInfo .carousel-control-prev,
+   #carouselInfo .carousel-control-next{
+     display: none;
    }
  }
 
