--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,11 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+ /* Arreglos */
+ .border-fix {
+   border-radius: 5rem;
+ }
+
  /* Menus */
  .menu-transparente{
    background-color: #fff;
@@ -126,7 +131,7 @@ textarea {
   transform: rotate(90deg) translate(2px,-2px);
 }
 
-/* Paleta de Colores */
+/* Colores propios */
 .primaria,body {
  background-color: #eee;
  color: #222;
@@ -136,9 +141,24 @@ textarea {
  background-color: #224;
  color: #eee;
 }
-.resaltado-borde {
+.borde-resaltado {
   border-color: #224;
 }
+.btn-resaltado {
+  background-color: #808000;
+  color: #fff;
+}
+.btn-outline-resaltado {
+  background: none;
+  border: 1px solid #808000;
+  color: #808000;
+}
+.btn-resaltado:hover,
+.btn-outline-resaltado:hover{
+  background-color: #606000;
+  color: #fff;
+}
+
 
 /* Cabecera */
 .navbar-brand .logo {
@@ -165,7 +185,7 @@ textarea {
 }
 
 #barra-principal .nav-item:hover {
-  box-shadow: inset 0 -3px 0 orange;
+  box-shadow: inset 0 -3px 0 #808000;
 }
 
 /* Principal */
@@ -193,7 +213,7 @@ textarea {
 }
 #carouselInfo nav a:hover{
   color: #fff;
-  background-color: orange;
+  background-color: #808000;
 }
 #carouselInfo nav a.active{
   color: #fff;
@@ -242,7 +262,7 @@ textarea {
 }
 
 .profilepic-wrapper a:hover {
-  background-color: orange;
+  background-color: #808000;
   color: #eee;
 }
 
