--- a/css/main.css
+++ b/css/main.css
@@ -272,6 +272,9 @@ textarea {
   margin: 0.5rem 0;
 }
 
+/* Tablas */
+
+
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
