--- a/css/main.css
+++ b/css/main.css
@@ -160,10 +160,20 @@ textarea {
   color: #fff;
 }
 
-.btn-primario{
-
+.btn-primario {
+  background-color: #224;
+  color: #fff;
 }
-
+.btn-primario-resaltado {
+  background: none;
+  border: 1px solid #224;
+  color: #808000;
+}
+.btn-primario:hover,
+.btn-primario-resaltado:hover{
+  background-color: #808000;
+  color: #fff;
+}
 
 /* Cabecera */
 .navbar-brand .logo {
@@ -265,11 +275,6 @@ textarea {
 /* Perfiles de Usuario */
 .profilepic-wrapper > *{
   margin-top: 0.5rem;
-}
-
-.profilepic-wrapper a:hover {
-  background-color: #808000;
-  color: #eee;
 }
 
 .materias li{
